crates/plotnik-lib/tests/05-typegen/definitions/error_def_root_optional_captures_uncollected.txt
A = (expression_statement (identifier) @id)??
Q = (program (A) @x)
==== diagnostics ====
error: captures `@id` skip together with `??` but nothing collects them
 --> query.ptk:1:5
  |
1 | A = (expression_statement (identifier) @id)??
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: capture the group so the skip is a single null: `(...)?? @items`
help: or discard the captures if only the structure matters: `(...)?? @_`
